--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -60,11 +60,11 @@
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=BecscoLiveV1.2120;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=BecscoLiveV1.2120; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=BecscoLiveV1.2120; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--Start connection string UMER PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=Warehouse_db; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
     <!--Start connection string Sami PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -124,9 +124,9 @@
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Naveed PC-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string Sami PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKToP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>
     <!--Start session string UMER PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
 
