--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Domain\ViewModels\DPDModel\DPDViewModel.cs" />
     <Compile Include="Domain\ViewModels\GlobalTaxViewModel.cs" />
     <Compile Include="Domain\ViewModels\PrestaShopModel\PrestaShopProductViewModel.cs" />
+    <Compile Include="Domain\ViewModels\ProductFilteringViewModel.cs" />
     <Compile Include="Domain\ViewModels\ScanSourceProductViewModel.cs" />
     <Compile Include="Domain\ViewModels\UploadedFileViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiModels\AccountSyncCollection.cs" />
