--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -50,7 +50,7 @@
   -->
   <system.web>
     <trust level="Full" />
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300"/>-->
     <!--End session string Development-Laptop-->
@@ -58,7 +58,7 @@
     <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
     <!--End session string Naveed PC-->
     <!--Start session string UMER PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />
     <!--Start session string Sami PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>-->
     
