Missing DLL added into source control Imported from Changeset 2374

--- a/WarehouseDpdLabelPrint/WarehouseDpdLabelPrint.csproj
+++ b/WarehouseDpdLabelPrint/WarehouseDpdLabelPrint.csproj
@@ -94,9 +94,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="EZio32.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="EZio32.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
