Added Product Category in Scan source file import and made some changes in the navigation for ECommerce project Imported from Changeset 2380

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -109,7 +109,7 @@
     <add key="CurrencyLayerKey" value="da1ba6a72e8c978f3eea68144f8a41d3"/>
     <add key="ApiUrl" value="http://www.apilayer.net/api/live?source="/>
     <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\CipherLabProductList.csv"/>
-    <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\ScanSourceProductFile.txt"/>
+    <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\scanSource\scansourceProductFileForTesting.txt"/>
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04"/>
 
   </appSettings>
