--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -495,6 +495,7 @@
     <Content Include="Areas\Shop\Views\User\OrderHistory.cshtml" />
     <Content Include="Areas\Shop\Views\User\WishList.cshtml" />
     <Content Include="Areas\Shop\Views\Shared\_AccountSideBar.cshtml" />
+    <Content Include="Areas\Shop\Views\Products\_DynamicFilters.cshtml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Areas\Shop\Scripts\bootstrap.js" />
