set the navigation on all screen and made cart menue partial view and user menu partial view and import that partial views on bothh sides where we were using these Imported from Changeset 2392

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -496,6 +496,8 @@
     <Content Include="Areas\Shop\Views\User\WishList.cshtml" />
     <Content Include="Areas\Shop\Views\Shared\_AccountSideBar.cshtml" />
     <Content Include="Areas\Shop\Views\Products\_DynamicFilters.cshtml" />
+    <Content Include="Areas\Shop\Views\Shared\_UserMenuPartial.cshtml" />
+    <Content Include="Areas\Shop\Views\Shared\_CartMenuPartial.cshtml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Areas\Shop\Scripts\bootstrap.js" />
