add socail media acccounts partial view, add tittle on hover of product names, categories names, sales name Imported from Changeset 2397

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -498,6 +498,7 @@
     <Content Include="Areas\Shop\Views\Products\_DynamicFilters.cshtml" />
     <Content Include="Areas\Shop\Views\Shared\_UserMenuPartial.cshtml" />
     <Content Include="Areas\Shop\Views\Shared\_CartMenuPartial.cshtml" />
+    <Content Include="Areas\Shop\Views\Shared\_SocialMediaAccountsPartial.cshtml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Areas\Shop\Scripts\bootstrap.js" />
