--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -110,8 +110,8 @@
     <add key="PrestashopUrl" value="http://127.0.0.1/prestashop/api/"/>
     <add key="CurrencyLayerKey" value="da1ba6a72e8c978f3eea68144f8a41d3"/>
     <add key="ApiUrl" value="http://www.apilayer.net/api/live?source="/>
-    <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\CipherLabProductList.csv"/>
-    <add key="ImportScanSourceProductFilePath" value="C:\Users\Umer\Desktop\scanSource\ScanSourceProductFile.txt"/>
+    <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\CipherLabProductList.csv"/>
+    <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\ScanSourceProductFile.txt"/>
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04"/>
 
   </appSettings>
