add low opacity backgound behind WMS banner image Imported from Changeset 2411

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -747,7 +747,8 @@
     <Content Include="img\services\Sensormatic-Solutions-Global-Stamp.jpg" />
     <Content Include="img\services\stock-control-banner.jpg" />
     <Content Include="img\services\warehouse-banner.jpg" />
-    <Content Include="img\services\warehouse_banner.png" />
+    <Content Include="img\services\warehouse_banner_top.png" />
+    <Content Include="img\services\warehouse_banner_low_opacity.jpg" />
     <Content Include="img\services\wh-bottom.jpg" />
     <Content Include="img\services\wh-middle.jpeg" />
     <Content Include="img\services\wh-top.jpeg" />
